# yorra

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  docker-compose.yml
.agents/: README.md  agents.md  hooks.json  schedules.json
.agents/rules/: backend.md  database.md  frontend.md  workflow.md
.agents/skills/brand-identity/: SKILL.md
.agents/skills/shadcn-ui/: SKILL.md
.agents/workflows/: architect.md  contract-check.md  debug.md  developer.md  generate-presentation.md  model-change.md  review.md  tenant-check.md  writer.md
backend/: .dockerignore  Dockerfile  create_user.py  pyproject.toml  set_webhook.py
backend/app/: main.py
backend/app/api/: endpoints.py  telegram.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: models.py
backend/app/services/: ai_summary_service.py  api_sports.py  match_service.py  telegram_service.py  third_place_combinations.py
backend/tests/: test_endpoints.py  test_main.py
docs/memory/2026-06-08_bracket_and_sidebets/: implementation_plan.md  walkthrough.md
docs/memory/2026-06-08_implement_porra_app/: implementation_plan.md  walkthrough.md
docs/memory/2026-06-09_frontend_user_registration/: implementation_plan.md  walkthrough.md
docs/memory/2026-06-09_production_deployment/: implementation_plan.md
docs/memory/2026-06-10_corrections_and_visual_bracket/: implementation_plan.md  walkthrough.md
docs/memory/2026-06-15_delete_users/: walkthrough.md
frontend/: Dockerfile  generate_players.py  index.html  package.json
frontend/src/: App.css  App.tsx  index.css
scripts/: verify.sh
(+22 files in other folders)
