[project]
name = "porra-deportiva-backend"
version = "0.1.0"
description = "porra-deportiva backend — FastAPI + SQLModel + asyncpg"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30",
    "pydantic-settings>=2.6",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# FastAPI's dependency-injection idiom calls Depends()/Query()/… in argument
# defaults on purpose; exempt them from flake8-bugbear's B008.
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
]

[tool.mypy]
python_version = "3.12"
strict = true

# SQLModel's table classes confuse mypy's strict plugin-less checks; scope the noise.
[[tool.mypy.overrides]]
module = ["app.models.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = "-q"
testpaths = ["tests"]
